[gd_scene format=3 uid="uid://cnxpf84v5n0gw"]

[ext_resource type="Script" uid="uid://bwqqv13e0e1qq" path="res://Scenes/main2.gd" id="1_l0sm3"]
[ext_resource type="Texture2D" uid="uid://d3au8o30yugfb" path="res://Assets/toi star wars.png" id="2_1v8r1"]
[ext_resource type="Texture2D" uid="uid://c6pin36mke2ui" path="res://Assets/jaripng.webp" id="2_l0sm3"]
[ext_resource type="Texture2D" uid="uid://ce784n1bvufex" path="res://Assets/KuusiPuutPNG.webp" id="3_go1jf"]
[ext_resource type="Texture2D" uid="uid://ctq464sowy8oe" path="res://Assets/puu3.png" id="4_7mvmt"]
[ext_resource type="Texture2D" uid="uid://c1lk8yirkyxlp" path="res://Assets/kuusia tastalta.webp" id="5_go1jf"]
[ext_resource type="Texture2D" uid="uid://ca02anypcjbqo" path="res://Assets/puu1.png" id="5_p1oyv"]
[ext_resource type="Texture2D" uid="uid://cmo8byol2wli8" path="res://Assets/puu2.png" id="6_rcyw2"]
[ext_resource type="Texture2D" uid="uid://dlfp0x5fql6pv" path="res://Assets/sieni 3.png" id="7_n5n48"]
[ext_resource type="Texture2D" uid="uid://car553vxfoc6m" path="res://Assets/sieni 2.png" id="8_3p5r5"]
[ext_resource type="Texture2D" uid="uid://c25151b30qjvu" path="res://Assets/puska.png" id="9_uhddi"]
[ext_resource type="Texture2D" uid="uid://cxn7dq7k8jlqg" path="res://Assets/sieni1.png" id="10_d1eiu"]
[ext_resource type="Texture2D" uid="uid://bhb3dhcekisvk" path="res://Assets/ruukkipuu1.png" id="11_axuel"]
[ext_resource type="Texture2D" uid="uid://7wybm3cw3a6p" path="res://Assets/ruukkipuu3.png" id="12_ncmf3"]
[ext_resource type="Texture2D" uid="uid://bvi7u1vjf78ya" path="res://Assets/nurmikko.png" id="13_u5i0y"]
[ext_resource type="Texture2D" uid="uid://vc6qsh21itak" path="res://Assets/maa.png" id="14_habdg"]
[ext_resource type="PackedScene" uid="uid://d0qtowtvrwv85" path="res://Scenes/enemy.tscn" id="15_qas6s"]
[ext_resource type="PackedScene" uid="uid://06hjdg86djqw" path="res://Scenes/player.tscn" id="16_37jld"]
[ext_resource type="Shader" uid="uid://nutbcyyjlrbp" path="res://Assets/crtshader.gdshader" id="17_0o7lx"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_ynf5e"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_hptm8"]
noise = SubResource("FastNoiseLite_ynf5e")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7u77a"]
size = Vector2(1154.5, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l0sm3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h1bgf"]
size = Vector2(190.5, 1025)

[sub_resource type="LabelSettings" id="LabelSettings_h1bgf"]
font_size = 56

[sub_resource type="ShaderMaterial" id="ShaderMaterial_d1ilt"]
shader = ExtResource("17_0o7lx")
shader_parameter/brightness = 1.02
shader_parameter/contrast = 1.08
shader_parameter/saturation = 1.1
shader_parameter/gamma = 1.05
shader_parameter/curvature = 0.14
shader_parameter/corner_soften = 0.06
shader_parameter/vignette = 0.38
shader_parameter/scanline_strength = 0.95
shader_parameter/scanline_density = 1.15
shader_parameter/interlace_strength = 0.2
shader_parameter/mask_strength = 0.22
shader_parameter/mask_scale = 1.0
shader_parameter/chroma_offset_px = 1.6
shader_parameter/luma_smear_px = 2.2
shader_parameter/jitter_px = 1.8
shader_parameter/wobble_px = 1.5
shader_parameter/tape_noise = 0.22
shader_parameter/tape_lines = 0.35
shader_parameter/roll_speed = 0.1
shader_parameter/roll_strength = 0.15
shader_parameter/glow_strength = 0.25
shader_parameter/glow_threshold = 0.65

[node name="Main2" type="Node2D" unique_id=2071018272]
script = ExtResource("1_l0sm3")

[node name="Assetit" type="Node2D" parent="." unique_id=1023800409]

[node name="Sprite2D" type="Sprite2D" parent="Assetit" unique_id=760076590]
position = Vector2(1205, 319)
scale = Vector2(1.7515113, 1.7515113)
texture = ExtResource("2_1v8r1")

[node name="ToiStarWars" type="Sprite2D" parent="Assetit" unique_id=1092091606]
position = Vector2(961.78345, 540.5)
scale = Vector2(1.3904637, 1.390464)
texture = ExtResource("2_l0sm3")

[node name="Foreground" type="Sprite2D" parent="Assetit" unique_id=853612427]
position = Vector2(821, 771)
texture = ExtResource("3_go1jf")

[node name="Foreground2" type="Sprite2D" parent="Assetit" unique_id=285782723]
position = Vector2(1364, 390)
texture = ExtResource("3_go1jf")

[node name="Horizon" type="Sprite2D" parent="Assetit" unique_id=831190686]
position = Vector2(691, 132)
texture = ExtResource("5_go1jf")

[node name="Puu11" type="Sprite2D" parent="Assetit" unique_id=827001912]
position = Vector2(464, 863)
scale = Vector2(0.6106909, 0.6106909)
texture = ExtResource("4_7mvmt")

[node name="Puu1" type="Sprite2D" parent="Assetit" unique_id=1724017339]
visible = false
position = Vector2(156, 759)
texture = ExtResource("5_p1oyv")

[node name="Puu2" type="Sprite2D" parent="Assetit" unique_id=2017753906]
visible = false
position = Vector2(1783, 751)
texture = ExtResource("6_rcyw2")

[node name="Puu3" type="Sprite2D" parent="Assetit" unique_id=1088769677]
visible = false
position = Vector2(1180, 750)
texture = ExtResource("6_rcyw2")

[node name="Puu4" type="Sprite2D" parent="Assetit" unique_id=235094724]
visible = false
position = Vector2(574, 751)
texture = ExtResource("4_7mvmt")

[node name="Sieni3" type="Sprite2D" parent="Assetit" unique_id=954336423]
position = Vector2(672, 997)
scale = Vector2(0.65, 0.65000004)
texture = ExtResource("7_n5n48")

[node name="Sieni2" type="Sprite2D" parent="Assetit" unique_id=858715460]
position = Vector2(1246, 997)
scale = Vector2(0.61864406, 0.61864406)
texture = ExtResource("8_3p5r5")

[node name="Puska" type="Sprite2D" parent="Assetit" unique_id=626937653]
position = Vector2(143, 958)
texture = ExtResource("9_uhddi")

[node name="Sieni1" type="Sprite2D" parent="Assetit" unique_id=96785287]
position = Vector2(192, 984.00006)
scale = Vector2(0.7807019, 0.7807017)
texture = ExtResource("10_d1eiu")

[node name="Puu5" type="Sprite2D" parent="Assetit" unique_id=2120199157]
visible = false
position = Vector2(908, 752)
texture = ExtResource("6_rcyw2")

[node name="Puu12" type="Sprite2D" parent="Assetit" unique_id=958754849]
visible = false
position = Vector2(270, 813)
scale = Vector2(0.8, 0.8)
texture = ExtResource("6_rcyw2")

[node name="Puu6" type="Sprite2D" parent="Assetit" unique_id=1004162863]
visible = false
position = Vector2(757, 761)
texture = ExtResource("5_p1oyv")

[node name="Puu16" type="Sprite2D" parent="Assetit" unique_id=611372063]
visible = false
position = Vector2(1266, 770)
texture = ExtResource("6_rcyw2")

[node name="Puu7" type="Sprite2D" parent="Assetit" unique_id=520690757]
position = Vector2(354, 753)
texture = ExtResource("4_7mvmt")

[node name="Puu8" type="Sprite2D" parent="Assetit" unique_id=33509897]
position = Vector2(1050, 757)
texture = ExtResource("6_rcyw2")

[node name="Puu9" type="Sprite2D" parent="Assetit" unique_id=941711183]
position = Vector2(1374, 763)
texture = ExtResource("5_p1oyv")

[node name="Puska2" type="Sprite2D" parent="Assetit" unique_id=950487400]
position = Vector2(1130, 986)
texture = ExtResource("9_uhddi")

[node name="Ruukkipuu" type="Sprite2D" parent="Assetit" unique_id=731848630]
position = Vector2(1146.0001, 747)
scale = Vector2(1.0741885, 1.854471)
texture = ExtResource("11_axuel")

[node name="Puu10" type="Sprite2D" parent="Assetit" unique_id=1211954570]
visible = false
position = Vector2(1570, 754)
texture = ExtResource("4_7mvmt")

[node name="Ruukkipuu2" type="Sprite2D" parent="Assetit" unique_id=1618700508]
position = Vector2(1919, 512.00006)
scale = Vector2(1.4302973, 1.7902949)
texture = ExtResource("11_axuel")

[node name="Ruukkipuu3" type="Sprite2D" parent="Assetit" unique_id=218004287]
position = Vector2(1867, 619)
scale = Vector2(1.4302973, 1.7902949)
texture = ExtResource("12_ncmf3")

[node name="Sieni5" type="Sprite2D" parent="Assetit" unique_id=1751907265]
position = Vector2(442.99997, 989.99994)
scale = Vector2(0.7288135, 0.7288136)
texture = ExtResource("8_3p5r5")

[node name="Sieni4" type="Sprite2D" parent="Assetit" unique_id=42980872]
position = Vector2(981, 992)
scale = Vector2(0.61864406, 0.61864406)
texture = ExtResource("8_3p5r5")

[node name="Sieni6" type="Sprite2D" parent="Assetit" unique_id=631791359]
position = Vector2(1417, 1001)
scale = Vector2(0.65, 0.65000004)
texture = ExtResource("7_n5n48")

[node name="Ruukkipuu4" type="Sprite2D" parent="Assetit" unique_id=1188294316]
position = Vector2(44, 680)
scale = Vector2(1.0741885, 1.854471)
texture = ExtResource("11_axuel")

[node name="Sieni7" type="Sprite2D" parent="Assetit" unique_id=374223216]
position = Vector2(791.99994, 985)
scale = Vector2(0.7807019, 0.7807017)
texture = ExtResource("10_d1eiu")

[node name="Sieni8" type="Sprite2D" parent="Assetit" unique_id=1765718897]
position = Vector2(1656, 992)
scale = Vector2(0.7807019, 0.7807017)
texture = ExtResource("10_d1eiu")

[node name="Puu13" type="Sprite2D" parent="Assetit" unique_id=575125619]
visible = false
position = Vector2(1050, 757)
texture = ExtResource("6_rcyw2")

[node name="Puu14" type="Sprite2D" parent="Assetit" unique_id=725212346]
position = Vector2(1454, 759)
texture = ExtResource("6_rcyw2")

[node name="Puu15" type="Sprite2D" parent="Assetit" unique_id=1722508938]
position = Vector2(36, 749)
texture = ExtResource("6_rcyw2")

[node name="Puu17" type="Sprite2D" parent="Assetit" unique_id=1094448667]
visible = false
position = Vector2(1689, 747)
texture = ExtResource("6_rcyw2")

[node name="Puu18" type="Sprite2D" parent="Assetit" unique_id=740395258]
visible = false
position = Vector2(850, 784)
texture = ExtResource("5_p1oyv")

[node name="Puu19" type="Sprite2D" parent="Assetit" unique_id=873663004]
visible = false
position = Vector2(1076, 781)
texture = ExtResource("6_rcyw2")

[node name="Grass" type="Sprite2D" parent="Assetit" unique_id=1791103214]
position = Vector2(294, 987)
texture = ExtResource("13_u5i0y")

[node name="Grass2" type="Sprite2D" parent="Assetit" unique_id=1338294040]
position = Vector2(880, 987)
texture = ExtResource("13_u5i0y")

[node name="Grass3" type="Sprite2D" parent="Assetit" unique_id=349258066]
position = Vector2(1422.5, 987)
texture = ExtResource("13_u5i0y")

[node name="Grass4" type="Sprite2D" parent="Assetit" unique_id=2099144459]
position = Vector2(2008.5, 987)
texture = ExtResource("13_u5i0y")

[node name="PointLight2D" type="PointLight2D" parent="." unique_id=1607246863]
position = Vector2(953.5001, 550.00006)
scale = Vector2(3.7324219, 2.1289065)
texture = SubResource("NoiseTexture2D_hptm8")

[node name="StaticBody2D" type="StaticBody2D" parent="." unique_id=1470588443]
position = Vector2(24, 420)
scale = Vector2(1.6000016, 1)
collision_mask = 65535

[node name="ColorRect" type="ColorRect" parent="StaticBody2D" unique_id=1150617481]
offset_left = -16.249983
offset_top = 606.0
offset_right = 25.36614
offset_bottom = 663.0
scale = Vector2(28.880003, 1)
color = Color(0.043137256, 0.1764706, 0.05882353, 1)
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D" unique_id=715538274]
visible = false
position = Vector2(576.75, 627)
shape = SubResource("RectangleShape2D_7u77a")

[node name="Sprite2D" type="Sprite2D" parent="StaticBody2D" unique_id=386004580]
position = Vector2(266.24976, 608)
texture = ExtResource("14_habdg")

[node name="Sprite2D2" type="Sprite2D" parent="StaticBody2D" unique_id=1825680686]
position = Vector2(858.1242, 606)
texture = ExtResource("14_habdg")

[node name="Enemy" parent="." unique_id=1570632947 instance=ExtResource("15_qas6s")]
unique_name_in_owner = true
position = Vector2(1417.0001, 912.00006)
scale = Vector2(2.03, 2.03)

[node name="Enemy2" parent="." unique_id=949670304 instance=ExtResource("15_qas6s")]
unique_name_in_owner = true
position = Vector2(1614.0001, 925.00006)
scale = Vector2(2.03, 2.03)

[node name="Player" parent="." unique_id=2129102789 instance=ExtResource("16_37jld")]
position = Vector2(217, 551)
scale = Vector2(1.0900006, 1.0900006)

[node name="StaticBody2D2" type="StaticBody2D" parent="." unique_id=307656748]
position = Vector2(-15, 518)
scale = Vector2(5.8099065, 63.36001)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2" unique_id=401752818]
shape = SubResource("RectangleShape2D_l0sm3")

[node name="StaticBody2D3" type="StaticBody2D" parent="." unique_id=1441035913]
position = Vector2(1902.0001, 453.00003)
scale = Vector2(5.8099065, 63.36001)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D3" unique_id=1199866925]
shape = SubResource("RectangleShape2D_l0sm3")

[node name="Level2Pass" type="Area2D" parent="." unique_id=441518048]
position = Vector2(1832, 889)
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level2Pass" unique_id=530216777]
position = Vector2(-14.75, -360.5)
shape = SubResource("RectangleShape2D_h1bgf")

[node name="ColorRect" type="ColorRect" parent="." unique_id=761265403]
offset_right = 1917.0
offset_bottom = 1078.0
color = Color(0, 0, 0, 0.6313726)
metadata/_edit_use_anchors_ = true

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=1876478000]
layer = 0

[node name="Label" type="Label" parent="CanvasLayer" unique_id=1627526221]
visible = false
offset_left = 702.0
offset_top = 253.0
offset_right = 1170.0
offset_bottom = 330.0
text = "You died lol noob"
label_settings = SubResource("LabelSettings_h1bgf")

[node name="DeathScreen" type="VBoxContainer" parent="CanvasLayer" unique_id=426147918]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -114.0
offset_top = -121.0
offset_right = 66.0
offset_bottom = 175.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2

[node name="RestartButton" type="Button" parent="CanvasLayer/DeathScreen" unique_id=1700965643]
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "Restart"

[node name="QuitButton" type="Button" parent="CanvasLayer/DeathScreen" unique_id=1617139240]
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "Quit"

[node name="ColorRect" type="ColorRect" parent="CanvasLayer" unique_id=1653974737]
material = SubResource("ShaderMaterial_d1ilt")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[connection signal="body_entered" from="Level2Pass" to="." method="_on_level_2_pass_body_entered"]
[connection signal="pressed" from="CanvasLayer/DeathScreen/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="CanvasLayer/DeathScreen/QuitButton" to="." method="_on_quit_button_pressed"]
